code/rosmod_v3/src/grammar/01-Software/ROSMOD_SoftwareParser.py
# Generated from java-escape by ANTLR 4.4
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .ROSMOD_SoftwareListener import ROSMOD_SoftwareListener
else:
    from ROSMOD_SoftwareListener import ROSMOD_SoftwareListener

class ROSMOD_SoftwareParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__29=1
    T__28=2
    T__27=3
    T__26=4
    T__25=5
    T__24=6
    T__23=7
    T__22=8
    T__21=9
    T__20=10
    T__19=11
    T__18=12
    T__17=13
    T__16=14
    T__15=15
    T__14=16
    T__13=17
    T__12=18
    T__11=19
    T__10=20
    T__9=21
    T__8=22
    T__7=23
    T__6=24
    T__5=25
    T__4=26
    T__3=27
    T__2=28
    T__1=29
    T__0=30
    ID=31
    INT=32
    DOUBLE=33
    BOOL=34
    WS=35
    COMMENT=36
    LINE_COMMENT=37

    tokenNames = [ u"<INVALID>", u"'component'", u"'request'", u"']'", u"'['", 
                   u"'msg'", u"'node'", u"':'", u"'s'", u"'<'", u"'server'", 
                   u"'publisher'", u"'package'", u"'{'", u"'subscriber'", 
                   u"'us'", u"'}'", u"'priority'", u"'='", u"'deadline'", 
                   u"';'", u"'timer'", u"'response'", u"'business_logic'", 
                   u"'>'", u"'client'", u"'srv'", u"'period'", u"'/'", u"'ms'", 
                   u"'ns'", u"ID", u"INT", u"DOUBLE", u"BOOL", u"WS", u"COMMENT", 
                   u"LINE_COMMENT" ]

    RULE_start = 0
    RULE_name = 1
    RULE_datatype = 2
    RULE_reference = 3
    RULE_value = 4
    RULE_unit = 5
    RULE_package = 6
    RULE_message = 7
    RULE_field = 8
    RULE_service = 9
    RULE_request = 10
    RULE_response = 11
    RULE_component = 12
    RULE_port = 13
    RULE_client = 14
    RULE_server = 15
    RULE_publisher = 16
    RULE_subscriber = 17
    RULE_timer = 18
    RULE_period = 19
    RULE_priority = 20
    RULE_deadline = 21
    RULE_abstract_business_logic = 22
    RULE_node = 23
    RULE_component_instance = 24

    ruleNames =  [ u"start", u"name", u"datatype", u"reference", u"value", 
                   u"unit", u"package", u"message", u"field", u"service", 
                   u"request", u"response", u"component", u"port", u"client", 
                   u"server", u"publisher", u"subscriber", u"timer", u"period", 
                   u"priority", u"deadline", u"abstract_business_logic", 
                   u"node", u"component_instance" ]

    def __init__(self, input):
        super(ROSMOD_SoftwareParser, self).__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ROSMOD_SoftwareParser.EOF, 0)

        def package(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.PackageContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.PackageContext,i)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_start

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterStart(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitStart(self)




    def start(self):

        localctx = ROSMOD_SoftwareParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50 
                self.package()
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ROSMOD_SoftwareParser.T__18):
                    break

            self.state = 55
            self.match(self.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.NameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(ROSMOD_SoftwareParser.ID)
            else:
                return self.getToken(ROSMOD_SoftwareParser.ID, i)

        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_name

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterName(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitName(self)




    def name(self):

        localctx = ROSMOD_SoftwareParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(self.ID)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.T__2:
                self.state = 58
                self.match(self.T__2)
                self.state = 59
                self.match(self.ID)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DatatypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.DatatypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i=None):
            if i is None:
                return self.getTokens(ROSMOD_SoftwareParser.INT)
            else:
                return self.getToken(ROSMOD_SoftwareParser.INT, i)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(ROSMOD_SoftwareParser.ID)
            else:
                return self.getToken(ROSMOD_SoftwareParser.ID, i)

        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_datatype

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterDatatype(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitDatatype(self)




    def datatype(self):

        localctx = ROSMOD_SoftwareParser.DatatypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_datatype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(self.ID)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.T__2:
                self.state = 66
                self.match(self.T__2)
                self.state = 67
                self.match(self.ID)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.T__26:
                self.state = 73
                self.match(self.T__26)
                self.state = 75
                _la = self._input.LA(1)
                if _la==ROSMOD_SoftwareParser.INT:
                    self.state = 74
                    self.match(self.INT)


                self.state = 77
                self.match(self.T__27)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReferenceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ReferenceContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(ROSMOD_SoftwareParser.ID)
            else:
                return self.getToken(ROSMOD_SoftwareParser.ID, i)

        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_reference

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterReference(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitReference(self)




    def reference(self):

        localctx = ROSMOD_SoftwareParser.ReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_reference)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(self.ID)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.T__2:
                self.state = 84
                self.match(self.T__2)
                self.state = 85
                self.match(self.ID)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ValueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(ROSMOD_SoftwareParser.BOOL, 0)

        def INT(self):
            return self.getToken(ROSMOD_SoftwareParser.INT, 0)

        def ID(self):
            return self.getToken(ROSMOD_SoftwareParser.ID, 0)

        def DOUBLE(self):
            return self.getToken(ROSMOD_SoftwareParser.DOUBLE, 0)

        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_value

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterValue(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitValue(self)




    def value(self):

        localctx = ROSMOD_SoftwareParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.ID) | (1 << self.INT) | (1 << self.DOUBLE) | (1 << self.BOOL))) != 0)):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnitContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.UnitContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_unit

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterUnit(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitUnit(self)




    def unit(self):

        localctx = ROSMOD_SoftwareParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_unit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__22) | (1 << self.T__15) | (1 << self.T__1) | (1 << self.T__0))) != 0)):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PackageContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.PackageContext, self).__init__(parent, invokingState)
            self.parser = parser

        def service(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.ServiceContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.ServiceContext,i)


        def node(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.NodeContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.NodeContext,i)


        def component(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.ComponentContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.ComponentContext,i)


        def message(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.MessageContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.MessageContext,i)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_package

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterPackage(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitPackage(self)




    def package(self):

        localctx = ROSMOD_SoftwareParser.PackageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_package)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(self.T__18)
            self.state = 96 
            self.name()
            self.state = 97
            self.match(self.T__17)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__29) | (1 << self.T__25) | (1 << self.T__24) | (1 << self.T__4))) != 0):
                self.state = 102
                token = self._input.LA(1)
                if token in [self.T__25]:
                    self.state = 98 
                    self.message()

                elif token in [self.T__4]:
                    self.state = 99 
                    self.service()

                elif token in [self.T__29]:
                    self.state = 100 
                    self.component()

                elif token in [self.T__24]:
                    self.state = 101 
                    self.node()

                else:
                    raise NoViableAltException(self)

                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(self.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessageContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.MessageContext, self).__init__(parent, invokingState)
            self.parser = parser

        def field(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.FieldContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.FieldContext,i)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_message

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterMessage(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitMessage(self)




    def message(self):

        localctx = ROSMOD_SoftwareParser.MessageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_message)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(self.T__25)
            self.state = 110 
            self.name()
            self.state = 111
            self.match(self.T__17)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.ID:
                self.state = 112 
                self.field()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(self.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.FieldContext, self).__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.DatatypeContext,0)


        def value(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.ValueContext,0)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_field

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterField(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitField(self)




    def field(self):

        localctx = ROSMOD_SoftwareParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120 
            self.datatype()
            self.state = 121 
            self.name()
            self.state = 124
            _la = self._input.LA(1)
            if _la==ROSMOD_SoftwareParser.T__12:
                self.state = 122
                self.match(self.T__12)
                self.state = 123 
                self.value()


            self.state = 126
            self.match(self.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ServiceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ServiceContext, self).__init__(parent, invokingState)
            self.parser = parser

        def request(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.RequestContext,0)


        def response(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.ResponseContext,0)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_service

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterService(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitService(self)




    def service(self):

        localctx = ROSMOD_SoftwareParser.ServiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_service)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(self.T__4)
            self.state = 129 
            self.name()
            self.state = 130
            self.match(self.T__17)
            self.state = 132
            _la = self._input.LA(1)
            if _la==ROSMOD_SoftwareParser.T__28:
                self.state = 131 
                self.request()


            self.state = 135
            _la = self._input.LA(1)
            if _la==ROSMOD_SoftwareParser.T__8:
                self.state = 134 
                self.response()


            self.state = 137
            self.match(self.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RequestContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.RequestContext, self).__init__(parent, invokingState)
            self.parser = parser

        def field(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.FieldContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.FieldContext,i)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_request

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterRequest(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitRequest(self)




    def request(self):

        localctx = ROSMOD_SoftwareParser.RequestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_request)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(self.T__28)
            self.state = 140
            self.match(self.T__17)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.ID:
                self.state = 141 
                self.field()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self.match(self.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ResponseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ResponseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def field(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.FieldContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.FieldContext,i)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_response

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterResponse(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitResponse(self)




    def response(self):

        localctx = ROSMOD_SoftwareParser.ResponseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_response)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(self.T__8)
            self.state = 150
            self.match(self.T__17)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSMOD_SoftwareParser.ID:
                self.state = 151 
                self.field()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.match(self.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComponentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ComponentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def timer(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.TimerContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.TimerContext,i)


        def datatype(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.DatatypeContext,0)


        def port(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.PortContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.PortContext,i)


        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_component

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterComponent(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitComponent(self)




    def component(self):

        localctx = ROSMOD_SoftwareParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_component)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(self.T__29)
            self.state = 160 
            self.name()
            self.state = 161
            self.match(self.T__23)
            self.state = 162 
            self.datatype()
            self.state = 163
            self.match(self.T__17)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__20) | (1 << self.T__19) | (1 << self.T__16) | (1 << self.T__9) | (1 << self.T__5))) != 0):
                self.state = 166
                token = self._input.LA(1)
                if token in [self.T__20, self.T__19, self.T__16, self.T__5]:
                    self.state = 164 
                    self.port()

                elif token in [self.T__9]:
                    self.state = 165 
                    self.timer()

                else:
                    raise NoViableAltException(self)

                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.match(self.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PortContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.PortContext, self).__init__(parent, invokingState)
            self.parser = parser

        def client(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.ClientContext,0)


        def server(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.ServerContext,0)


        def publisher(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.PublisherContext,0)


        def subscriber(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.SubscriberContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_port

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterPort(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitPort(self)




    def port(self):

        localctx = ROSMOD_SoftwareParser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_port)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            token = self._input.LA(1)
            if token in [self.T__5]:
                self.state = 173 
                self.client()

            elif token in [self.T__20]:
                self.state = 174 
                self.server()

            elif token in [self.T__19]:
                self.state = 175 
                self.publisher()

            elif token in [self.T__16]:
                self.state = 176 
                self.subscriber()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClientContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ClientContext, self).__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.NameContext,0)


        def reference(self):
            return self.getTypedRuleContext(ROSMOD_SoftwareParser.ReferenceContext,0)


        def getRuleIndex(self):
            return ROSMOD_SoftwareParser.RULE_client

        def enterRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.enterClient(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSMOD_SoftwareListener ):
                listener.exitClient(self)




    def client(self):

        localctx = ROSMOD_SoftwareParser.ClientContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_client)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(self.T__5)
            self.state = 180
            self.match(self.T__21)
            self.state = 181 
            self.reference()
            self.state = 182
            self.match(self.T__6)
            self.state = 183 
            self.name()
            self.state = 184
            self.match(self.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ServerContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSMOD_SoftwareParser.ServerContext, self).__init__(parent, invokingState)
            self.parser = parser

        def deadline(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSMOD_SoftwareParser.DeadlineContext)
            else:
                return self.getTypedRuleContext(ROSMOD_SoftwareParser.DeadlineContext,i)

